# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_fuchsia_host || is_fuchsia) {
  import("//build/dart/dart_library.gni")
  import("//build/dart/dart_tool.gni")

  dart_library("flutter_frontend_server") {
    disable_analysis = true
    package_name = "flutter_frontend_server"

    sources = [
      "server.dart",
    ]

    deps = [
      "//third_party/dart-pkg/pub/args",
      "//third_party/dart-pkg/pub/path",
      "//third_party/dart-pkg/pub/usage",
      "//third_party/dart/pkg/build_integration",
      "//third_party/dart/pkg/frontend_server",
      "//third_party/dart/pkg/front_end",
      "//third_party/dart/pkg/kernel",
      "//third_party/dart/pkg/vm",
    ]
  }

  dart_tool("frontend_server_tool") {
    main_dart = "bin/starter.dart"
    source_dir = "../flutter_frontend_server"
    disable_analysis = true
    output_name = "frontend_server"

    sources = []

    deps = [
      ":flutter_frontend_server",
    ]
  }
}

