# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("glue") {
  sources = [
    "stack_trace.h",
    "trace_event.h",
  ]

  deps = [
    "//lib/ftl",
  ]

  if (is_fuchsia) {
    sources += [
      "stack_trace_fuchsia.cc",
    ]
  } else {
    sources += [
      "stack_trace_base.cc",
      "task_runner_adaptor.cc",
      "task_runner_adaptor.h",
    ]

    deps += [
      "//base",
    ]
  }
}
