# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("glue") {
  sources = [
    "stack_trace.h",
    "trace_event.h",
  ]

  deps = [
    "//garnet/public/lib/fxl",
  ]

  public_configs = [
    "$flutter_root:config",
  ]

  if (is_fuchsia) {
    sources += [ "stack_trace_fuchsia.cc" ]

    public_deps = [
      "//zircon/system/ulib/trace",
    ]
  } else {
    sources += [ "stack_trace_base.cc" ]

    deps += [ "$flutter_root/fml" ]
  }
}
