# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("impeller_public_config") {
  include_dirs = [ ".." ]
}

group("impeller") {
  public_deps = [
    "aiks",
    "archivist",
    "base",
    "compiler",
    "display_list",
    "entity",
    "geometry",
    "image",
    "renderer",
  ]
}

executable("impeller_unittests") {
  testonly = true

  deps = [
    "aiks:aiks_unittests",
    "archivist:archivist_unittests",
    "base:base_unittests",
    "compiler:compiler_unittests",
    "display_list:display_list_unittests",
    "entity:entity_unittests",
    "fixtures",
    "geometry:geometry_unittests",
    "image:image_unittests",
    "playground",
    "renderer:renderer_unittests",
  ]
}
