# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This variable should point to the parent directory of the Mojo SDK.
mojo_sdk_root = "//"

# This variable specifies a suitable gtest target.
mojo_gtest = "//third_party/gtest"
