# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("scheduler") {
  sources = [
    "scheduler.cc",
    "scheduler.h",
    "time_interval.cc",
    "time_interval.h",
    "timer.cc",
    "timer.h",
  ]

  deps = [
    "//base",
  ]
}
